--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
 </head>
 <body>
   <h1>Hello all, welcome to my website</h1>
-  <p>Hey folks this is my first website hosted on Github Pages</p>
+  <p>Hey folks this is my first website hosted on Github Pages</p><br><br>
+  
+  <form action="mailto:chittampallyrajesh@gmail.com" method="post" enctype="text/plain">
+  Name:<br>
+  <input type="text" name="name"><br>
+  E-mail:<br>
+  <input type="text" name="mail"><br>
+  Comment:<br>
+  <input type="text" name="comment" size="50"><br><br>
+  <input type="submit" value="Send">
+  <input type="reset" value="Reset">
+  </form>
+                                                                  
 </body>
 </html>
