--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</div>
 			<!--  <div id="right-column">  -->
 			<div id="main-image">
-				<img src="images/myImage.png" width="200" height="200" title="Rajesh Chittampally" alt="Rajesh image" />
+				<img src="myImage.png" width="200" height="200" title="Rajesh Chittampally" alt="Rajesh image" />
 			</div>
 
 
