--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div id="main-content">
 		<!-- <div id="left-column"> -->
 			<div id="logo">
-			WELCOME TO KIRAN'S WEBSITE
+			WELCOME TO RAJESH'S WEBSITE
 			</div>
 			<div class="box">
         		<h1>What You'll Find Here</h1>
