--- a/aboutme.html
+++ b/aboutme.html
@@ -54,7 +54,7 @@
 
 			<h4>MY COLLEGE</h4>
 
-			<img src="images/smec.jpg" alt="St. Martins Engineering college" title="St. Martins Engineering College">
+			<img src="smec.jpg" alt="St. Martins Engineering college" title="St. Martins Engineering College">
 
 			
 		</div><br><br>
