--- a/gallery.html
+++ b/gallery.html
@@ -135,27 +135,27 @@ body {font-family: Verdana,sans-serif;margin:0}
 
 	<div class="mySlides fade">
   		<div class="numbertext">1 / 5</div>
-  		<img src="images/myImage.png"  alt="Rajesh Chittampally" title="Rajesh Chittampally" style="width:100%">
+  		<img src="myImage.png"  alt="Rajesh Chittampally" title="Rajesh Chittampally" style="width:100%">
 	</div>
 
 	<div class="mySlides fade">
 		<div class="numbertext">2 / 5</div>
-  		<img src="images/fbProfile.jpg" title="Rajesh Chittampally" style="width:100%">
+  		<img src="fbProfile.jpg" title="Rajesh Chittampally" style="width:100%">
 	</div>
 
 	<div class="mySlides fade">
   		<div class="numbertext">3 / 5</div>
-	    <img src="images/blazerPic.jpg" title="Rajesh Chittampally" style="width:100%">
+	    <img src="blazerPic.jpg" title="Rajesh Chittampally" style="width:100%">
 	</div>
 
 	<div class="mySlides fade">
     	<div class="numbertext">4 / 5</div>
-  		<img src="images/onBike.jpg" title="Rajesh Chittampally" style="width:100%">
+  		<img src="onBike.jpg" title="Rajesh Chittampally" style="width:100%">
 	</div>
 
 	<div class="mySlides fade">
 		<div class="numbertext">5 / 5</div>
-		<img src="images/pic.jpg" title="Rajesh Chittampally" style="width:100%">
+		<img src="pic.jpg" title="Rajesh Chittampally" style="width:100%">
 	</div>
 
 	<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
