--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="box">
 				<object width="300" height="500" data="JOB_RESUME.docx"></object>
-				<iframe src="http://docs.google.com/gview?url=JOB_RESUME.doc&embedded=true"></iframe>
+				<iframe src="JOB_RESUME.doc"></iframe>
 
         		
 				<br><br>
