--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="box">
 				<object width="300" height="500" data="JOB_RESUME.docx"></object>
-				<iframe src="JOB_RESUME.doc"></iframe>
+				<iframe src="JOB_RESUME.docx"></iframe>
 
         		
 				<br><br>
@@ -33,7 +33,7 @@
 			</div>
 			<!-- <div class="box" style="align: center" >
 				<h2 style="text-align: center;">Send an EMAIL</h2>
-					<form method="post" action="mailto:kkirank24@gmail.com" style="padding-left: 0px; padding-right:  10px; ">
+					<form method="post" action="mailto:chittampallyrajesh@gmail.com" style="padding-left: 0px; padding-right:  10px; ">
     					<P>
     					First name: <INPUT type="text" name="firstname" required><br><br>
     					Last name: <INPUT type="text" name="lastname" required><br><br>
