--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="box">
 				<object width="300" height="500" data="JOB_RESUME.docx"></object>
-				<iframe src="https://github.com/rajesh996/rajesh996.github.io/blob/master/JOB_Resume.docx"></iframe>
+				<iframe src="https://github.com/rajesh996/rajesh996.github.io/blob/master/JOB_Resume.docx" style="width: 350; height: 400;"></iframe>
 
         		
 				<br><br>
