--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="box">
 				<object width="300" height="500" data="JOB_RESUME.docx"></object>
-				<iframe src="https://drive.google.com/open?id=1K0aN3OjZQTfsmfYJpRmEtXEhZUtJfCXi" style="width: 350; height: 400;"></iframe>
+				<iframe src="https://drive.google.com/open?id=1K0aN3OjZQTfsmfYJpRmEtXEhZUtJfCXi"></iframe>
 
         		
 				<br><br>
