--- a/resume.html
+++ b/resume.html
@@ -24,6 +24,8 @@
 			<div class="box">
 				<object width="300" height="500" data="JOB_RESUME.docx"></object>
 				<iframe src="https://drive.google.com/open?id=1K0aN3OjZQTfsmfYJpRmEtXEhZUtJfCXi"></iframe>
+				<iframe src='https://view.officeapps.live.com/op/embed.aspx?src=http://remote.url.tld/path/to/document.doc' width='1366px' height='623px' frameborder='0'>This is an embedded <a target='_blank' href='http://office.com'>Microsoft Office</a> document, powered by <a target='_blank' href='http://office.com/webapps'>Office Online</a>.</iframe>
+
 
         		
 				<br><br>
