--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Contact me | Rajesh Chittampally</title>
+	<title> Resume | Rajesh Chittampally</title>
 	<link href="home.css" rel="stylesheet" type="text/css" />
 
 </head>
@@ -24,7 +24,6 @@
 			<div class="box">
 				<object width="300" height="500" data="JOB_RESUME.docx"></object>
 				<iframe src="https://drive.google.com/open?id=1K0aN3OjZQTfsmfYJpRmEtXEhZUtJfCXi"></iframe>
-				<iframe src='https://view.officeapps.live.com/op/embed.aspx?src=http://remote.url.tld/path/to/document.doc' width='1366px' height='623px' frameborder='0'>This is an embedded <a target='_blank' href='http://office.com'>Microsoft Office</a> document, powered by <a target='_blank' href='http://office.com/webapps'>Office Online</a>.</iframe>
 
 
         		
