--- a/contactme.html
+++ b/contactme.html
@@ -22,7 +22,7 @@
 			CONTACT ME
 			</div>
 			<div class="box">
-        		<h1>CONTACT ME</h1>
+        		<h1>want to hire me? You can reach me out at below Places</h1>
         		<p>Hi all you can contact me using the below options.</p>
 				<p>You can find me on <mark><strong>facebook</strong></mark> and connect with me on <a href="#fb">Facebook</a></p><br>
 
