--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>About me | Rajesh Chittampally</title>
+	<title>Gallery | Rajesh Chittampally</title>
 	<link href="home.css" rel="stylesheet" type="text/css" />
 
 	<style>
