--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 	
 	</div>
 			<!--  <div id="right-column">  -->
-			<div id="main-image">
+			<!-- div id="main-image">
 				<img src="myImage.png" width="200" height="200" title="Rajesh Chittampally" alt="Rajesh image" />
-			</div>
+			</div -->
 
 
 			<!-- <div class="sidebar">  -->
