--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<!-- <div class="sidebar">  -->
 			<div class="box">
 				<h3>Blurb About Me</h3>
-				<p>My name is Rajesh Chittampally. And I love coding, exploring new technologies and new places</p><br>
+				<p>My name is <mark>Rajesh Chittampally.</mark> And I love coding, exploring new technologies and new places</p><br>
 				<p>I always dreamt and wanted to be a part and build software and products for front end and Android Operating System. </p>
 			</div>
 				<div id="nav1">
