--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 			<!-- <div class="sidebar">  -->
 			<div class="box">
 				<h3>Blurb About Me</h3>
-				<p>My name is <strong>Rajesh Chittampally.</strong> And I love coding, exploring new technologies and new places</p><br>
-				<p>I always dreamt and wanted to be a part and build software and products for front end and Android Operating System. </p>
+				<p>My name is <strong>Rajesh Chittampally.</strong>  I am very passionate about coding and exploring new technologies in IT.I love travelling places and have been to many places in India. I always dreamt of becoming a successful IT professional mainly focusing on Full stack development.</p><br>
 			</div>
 				<div id="nav1">
 					<h3>Find Me Elsewhere</h3>
