--- a/contactme.html
+++ b/contactme.html
@@ -23,13 +23,13 @@
 			</div>
 			<div class="box">
         		<h1>Want to hire me? You can reach me at below Places</h1>
-			<p>You can connect with me on <mark><strong>LinkedIn</strong></mark> at <a href="https://in.linkedin.com/in/rajeshchittampally">LinkedIn</a></p><br>
+			<p>You can connect with me on <strong>LinkedIn</strong> at <a href="https://in.linkedin.com/in/rajeshchittampally">LinkedIn</a></p><br>
 			
-			<p>You can connect with me on <mark><strong>AngelList</strong></mark> at <a href="https://angel.co/rajesh-chittampally">AngelList</a></p><br>
+			<p>You can connect with me on <strong>AngelList</strong> at <a href="https://angel.co/rajesh-chittampally">AngelList</a></p><br>
 
-			<p>You can connect with me on <mark><strong>facebook</strong></mark> at <a href="https://www.facebook.com/rajesh.chittampally.3">Facebook</a></p><br>
+			<p>You can connect with me on <strong>facebook</strong> at <a href="https://www.facebook.com/rajesh.chittampally.3">Facebook</a></p><br>
 
-			<p>You can connect with me on <mark><strong>Twitter</strong></mark> at <a href="https://www.twitter.com/rchittampally">Twitter</a></p><br><br>
+			<p>You can connect with me on <strong>Twitter</strong> at <a href="https://www.twitter.com/rchittampally">Twitter</a></p><br><br>
 
 			<br><br>
 			<hr>
