--- a/contactme.html
+++ b/contactme.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="box">
         		<h1>Want to hire me? You can reach me at below Places</h1>
-			<p>You can connect with me on <strong>LinkedIn</strong> at <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="rajeshchittampally" style="position: right;"><a class="LI-simple-link" href='https://in.linkedin.com/in/rajeshchittampally?trk=profile-badge'>Rajesh Chittampally</a></div><!-- a href="https://in.linkedin.com/in/rajeshchittampally" LinkedIn --></a></p><br>
+			<p>You can connect with me on <strong>LinkedIn</strong> at <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="rajeshchittampally" style="text-align: right;"><a class="LI-simple-link" href='https://in.linkedin.com/in/rajeshchittampally?trk=profile-badge'>Rajesh Chittampally</a></div><!-- a href="https://in.linkedin.com/in/rajeshchittampally" LinkedIn --></a></p><br>
 			
 			<p>You can connect with me on <strong>AngelList</strong> at <a href="https://angel.co/rajesh-chittampally">AngelList</a></p><br>
 
