--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Home | Rajesh Chittampally</title>
     <link href="home.css" rel="stylesheet" type="text/css" />
+	<style>
+	@media screen and (min-width: 500px){
+	body{
+	background-color: light-blue;
+	display: flex;
+	flex-wrap: wrap;
+	}}
+	</style>
 </head>
 <body>
 <div id="wrapper">
