--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Home | Rajesh Chittampally</title>
     <link href="home.css" rel="stylesheet" type="text/css" />
 	<style>
-	@media screen and (min-width: 500px){
+	@media screen and (max-width: 500px){
 	body{
 	background-color: light-blue;
 	display: flex;
