--- a/contactme.html
+++ b/contactme.html
@@ -6,6 +6,15 @@
 	<title>Contact me | Rajesh Chittampally</title>
 	<link href="home.css" rel="stylesheet" type="text/css" />
 	<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<style>
+		@media screen and (max-width: 500px){
+			body{
+				display: flex;
+				flex-wrap: wrap;
+			}
+		}
+	</style>
 </head>
 <body>
 
