--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,16 @@
 	<meta charset="utf-8">
 	<title>Gallery | Rajesh Chittampally</title>
 	<link href="home.css" rel="stylesheet" type="text/css" />
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<style>
+		@media screen and (max-width: 500px){
+			body{
+				display: flex;
+				flex-wrap: wrap;
+			}
+		}
+	</style>
 
 	<style>
 * {box-sizing:border-box}
