--- a/hobbies.html
+++ b/hobbies.html
@@ -3,8 +3,26 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	
+	
+	
+	<!-- Title of the Web Page -->
 	<title>Hobbies | Rajesh Chittampally</title>
+	
+	
+	<!-- CSS File that is used for styling the website -->
 	<link href="home.css" rel="stylesheet" type="text/css" />
+	
+	<!-- This tag makes sure that the site is responsive and works fine all types of devices -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<style>
+		@media screen and (max-width: 500px){
+			body{
+				display: flex;
+				flex-wrap: wrap;
+			}
+		}
+	</style>
 
 </head>
 <body>
