--- a/resume.html
+++ b/resume.html
@@ -3,8 +3,23 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	
+	<!-- Title of the Web page -->
 	<title> Resume | Rajesh Chittampally</title>
+	
+	<!-- CSS File that is used to style the website -->
 	<link href="home.css" rel="stylesheet" type="text/css" />
+	
+	<!-- 	RESPONSIVE META VIEWPORT TAG, and STYLE TAG for responsive functionality 	-->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<style>
+		@media screen and (max-width: 500px){
+			body{
+				display: flex;
+				flex-wrap: wrap;
+			}
+		}
+	</style>
 
 </head>
 <body>
