--- a/index.html
+++ b/index.html
@@ -8,16 +8,38 @@
 	<style>
 	@media screen and (max-width: 500px){
 	body{
-	display: flex;
-	flex-wrap: wrap;
-	}}
+		display: flex;
+		flex-wrap: wrap;
+		}
+	.nav {
+    z-index: 10;
+    background-color: #fff;
+    width: 300px;
+    position: absolute;
+    /* This trasform moves the drawer off canvas. */
+    -webkit-transform: translate(-300px, 0);
+    transform: translate(-300px, 0);
+    /* Optionally, we animate the drawer. */
+    transition: transform 0.3s ease;
+  }
+  .nav.open {
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0);
+  }
+  .nav__item {
+    display: list-item;
+    border-bottom: 1px solid #E0E0E0;
+    width: 100%;
+    text-align: left;
+  }
+	}
 	</style>
 </head>
 <body>
 <div id="wrapper">
     
 	<div id="header">
-		<div id="nav"><a href="index.html">Home</a> | <a href="aboutme.html">About Me</a> | <a href="hobbies.html">Hobbies</a> | <a href="gallery.html">Gallery</a> | <a href="resume.html">Resume</a> | <a href="contactme.html">Contact Me</a></div>
+		<div id="nav"><a href="index.html" class="nav_item">Home</a> | <a href="aboutme.html" class="nav_item">About Me</a> | <a href="hobbies.html" class="nav_item">Hobbies</a> | <a href="gallery.html" class="nav_item">Gallery</a> | <a href="resume.html" class="nav_item">Resume</a> | <a href="contactme.html" class="nav_item">Contact Me</a></div>
 		<div id="bg"></div>
 	</div>
 	
