--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
   }
 	}
 	</style>
+	
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-8141045869878494",
+          enable_page_level_ads: true
+     });
+</script>
 </head>
 <body>
 <div id="wrapper">
