--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
     text-align: left;
   }
 	}
+
+	@media screen and (max-width: 900px){
+		body{
+			width: 100%;
+		}
+	}
 	</style>
 	
 	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
