--- a/index.html
+++ b/index.html
@@ -39,9 +39,13 @@
   }
 	}
 
-	@media screen and (max-width: 900px){
+	@media screen and (max-width: 1024px){
 		body{
 			width: 100%;
+		}
+
+		#header{
+			max-width: 100%;
 		}
 	}
 	</style>
