--- a/index.html
+++ b/index.html
@@ -41,9 +41,32 @@
 
 	@media screen and (max-width: 1024px){
 		body{
+			display: flex;
+			flex-wrap: wrap;
 			max-width: 100%;
 		}
 
+		.nav {
+    z-index: 10;
+    background-color: #fff;
+    width: 100%;
+    position: absolute;
+    /* This trasform moves the drawer off canvas. */
+    -webkit-transform: translate(-300px, 0);
+    transform: translate(-300px, 0);
+    /* Optionally, we animate the drawer. */
+    transition: transform 0.3s ease;
+  }
+  .nav.open {
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0);
+  }
+  .nav__item {
+    display: list-item;
+    border-bottom: 1px solid #E0E0E0;
+    width: 100%;
+    text-align: left;
+  }
 		#header{
 			max-width: 100%;
 		}
