single page website

--- a/gallery.html
+++ b/gallery.html
@@ -14,6 +14,13 @@
 				flex-wrap: wrap;
 			}
 		}
+
+    @media screen and (max-width: 1024px){
+      body{
+        display: flex;
+        flex-wrap: wrap;
+      }
+    }
 	</style>
 
 	<style>
@@ -178,6 +185,7 @@ body {font-family: Verdana,sans-serif;margin:0}
 	<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 	<a class="next" onclick="plusSlides(1)">&#10095;</a>
 
+</div>
 </div>
 <br>
 
