--- a/aboutme.html
+++ b/aboutme.html
@@ -13,6 +13,13 @@
 				flex-wrap: wrap;
 			}
 		}
+
+		@media screen and (max-width: 1024px){
+			body{
+				display: flex;
+				flex-wrap: wrap;
+			}
+		}
 	</style>
 	
 	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
