--- a/hobbies.html
+++ b/hobbies.html
@@ -4,8 +4,6 @@
 <head>
 	<meta charset="utf-8">
 	
-	
-	
 	<!-- Title of the Web Page -->
 	<title>Hobbies | Rajesh Chittampally</title>
 	
@@ -17,6 +15,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style>
 		@media screen and (max-width: 500px){
+			body{
+				display: flex;
+				flex-wrap: wrap;
+			}
+		}
+
+		@media screen and (max-width: 1024px){
 			body{
 				display: flex;
 				flex-wrap: wrap;
