--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
 	<title>Home | Rajesh Chittampally</title>
+	
+	<link rel="icon" type="image/jpg" href="./images/myPic.jpg" />
 	<link href="home.css" rel="stylesheet" type="text/css" />
 	<style>
 	@media screen and (max-width: 500px){
