--- a/aboutme.html
+++ b/aboutme.html
@@ -36,7 +36,7 @@
 	<div id="wrapper">
     
 		<div id="header">
-			<div id="nav"><a href="index.html">Home</a> | <a href="aboutme.html">About Me</a> | <a href="hobbies">Hobbies</a> | <a href="gallery.html">Gallery</a> | <a href="resume.html">Resume</a> | <a href="contactme.html">Contact Me</a></div>
+			<div id="nav"><a href="index.html">Home</a> | <a href="aboutme.html">About Me</a> | <a href="hobbies.dz">Hobbies</a> | <a href="gallery.html">Gallery</a> | <a href="resume.html">Resume</a> | <a href="contactme.html">Contact Me</a></div>
 			<div id="bg"></div>
 		</div>
 	
