--- a/resume.html
+++ b/resume.html
@@ -53,6 +53,7 @@
 			</div>
 			<div class="box">
 				<object width="300" height="500" data="JOB_RESUME.docx"></object>
+				<iframe src="/Rajesh_Chittampally_Resume.pdf"></iframe>
 				<iframe src="https://drive.google.com/open?id=1K0aN3OjZQTfsmfYJpRmEtXEhZUtJfCXi"></iframe>
 
 
