--- a/resume.html
+++ b/resume.html
@@ -53,8 +53,8 @@
 			</div>
 			<div class="box">
 				<object width="300" height="500" data="JOB_RESUME.docx"></object>
-				<iframe src="/Rajesh_Chittampally_Resume.pdf"></iframe>
-				<iframe src="https://drive.google.com/open?id=1K0aN3OjZQTfsmfYJpRmEtXEhZUtJfCXi"></iframe>
+				<iframe src="/Rajesh_Chittampally_Resume.pdf" style="width: 300px; height: 500px; text-align: center;"></iframe>
+				
 
 
         		
