--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@
 			</div>
 			<div class="box">
 				<object width="300" height="500" data="JOB_RESUME.docx"></object>
-				<iframe src="/Rajesh_Chittampally_Resume.pdf" style="width: 300px; height: 500px; text-align: center;"></iframe>
+				<iframe src="/Rajesh_Chittampally_Resume.pdf" style="width: 60%; height: 70%; text-align: center;"></iframe>
 				
 
 
