--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 	<div id="wrapper">
 
 		<div id="header">
-			<div id="nav"><a href="index.html" class="nav_item">Home</a> | <a href="#aboutme" class="nav_item">About Me</a> | <a href="#my_hobbies" class="nav_item">Hobbies</a> | <a href="#contactme" class="nav_item">Contact Me</a></div>
+			<div id="nav"><a href="index.html" class="nav_item">Home</a> | <a href="#aboutme" class="nav_item">About Me</a> | <a href="#my_hobbies" class="nav_item">Hobbies</a> | <a href="resume" class"nav_item">Hire Me</a> | <a href="#contactme" class="nav_item">Contact Me</a></div>
 			<div id="bg"></div>
 		</div>
 
@@ -339,6 +339,22 @@
 			
 		</div>
 		<br><br>
+		
+		<div id="resume">
+			<div id="main-content">
+				<!-- <div id="left-column"> -->
+				<div id="logo">
+				RESUME
+				</div>
+				<div class="box">
+					<object width="300" height="500" data="JOB_RESUME.docx"></object>
+					<iframe id="resume" src="/Rajesh_Chittampally_Resume.pdf" style="width: 60%; height: 700px; text-align: center;"></iframe>
+				     	<br><br>
+				<hr>
+				<br>
+				</div>
+			</div>
+		</div><br><br>
 
 		<div id="contactme">
 			<div id="main-content">
