--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 	<div id="wrapper">
 
 		<div id="header">
-			<div id="nav"><a href="index.html" class="nav_item">Home</a> | <a href="#aboutme" class="nav_item">About Me</a> | <a href="#my_hobbies" class="nav_item">Hobbies</a> | <a href="resume" class"nav_item">Hire Me</a> | <a href="#contactme" class="nav_item">Contact Me</a></div>
+			<div id="nav"><a href="index.html" class="nav_item">Home</a> | <a href="#aboutme" class="nav_item">About Me</a> | <a href="#my_hobbies" class="nav_item">Hobbies</a> | <a href="myresume" class"nav_item">Hire Me</a> | <a href="#contactme" class="nav_item">Contact Me</a></div>
 			<div id="bg"></div>
 		</div>
 
@@ -340,7 +340,7 @@
 		</div>
 		<br><br>
 		
-		<div id="resume">
+		<div id="myresume">
 			<div id="main-content">
 				<!-- <div id="left-column"> -->
 				<div id="logo">
