--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 	<div id="wrapper">
 
 		<div id="header">
-			<div id="nav"><a href="index.html" class="nav_item">Home</a> | <a href="#aboutme" class="nav_item">About Me</a> | <a href="#my_hobbies" class="nav_item">Hobbies</a> | <a href="myresume" class"nav_item">Hire Me</a> | <a href="#contactme" class="nav_item">Contact Me</a></div>
+			<div id="nav"><a href="index.html" class="nav_item">Home</a> | <a href="#aboutme" class="nav_item">About Me</a> | <a href="#my_hobbies" class="nav_item">Hobbies</a> | <a href="#myresume" class"nav_item">Hire Me</a> | <a href="#contactme" class="nav_item">Contact Me</a></div>
 			<div id="bg"></div>
 		</div>
 
