--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
 }
 </style>
 
+	<meta name="google-site-verification" content="IeMXqeKrVJG2Cr-vhS033RzBe7HWaGnQEK6say9cpuQ" />
 
 </head>
 <body>
