--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 	
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-
+	
+	<!-- title to be displayed in browser Tab -->
 	<title>Home | Rajesh Chittampally</title>
 	
 	<link rel="icon" type="image/jpg" href="./images/myPic.jpg" />
 	<link href="home.css" rel="stylesheet" type="text/css" />
 	<style>
+		
+	/* Query to run when maximum width is 500px */
 	@media screen and (max-width: 500px){
 		body{
 			display: flex;
