added comments & fixed small typo

--- a/aboutme.html
+++ b/aboutme.html
@@ -24,6 +24,7 @@
 	
 	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
+	//google ads widget to show ads on website
      (adsbygoogle = window.adsbygoogle || []).push({
           google_ad_client: "ca-pub-8141045869878494",
           enable_page_level_ads: true
@@ -32,7 +33,6 @@
 
 </head>
 <body>
-
 	<div id="wrapper">
     
 		<div id="header">
@@ -59,7 +59,6 @@
 			</div>
 		</div>
 
-
 		<br><br>
 		<div class="box" id="school">
 			<h3>SCHOOLING</h3>
@@ -78,11 +77,10 @@
 
 			<h4>MY COLLEGE</h4>
 
-			<img src="smec.jpg" alt="St. Martins Engineering college" title="St. Martins Engineering College">
+			<img src="smec.jpg" alt="St. Martin's Engineering college" title="St. Martin's Engineering College">
 
 			
 		</div><br><br>
-
 
 		<div id="family" class="box">
 			<h3>FAMILY</h3>
@@ -90,15 +88,12 @@
 			
 		</div><br><br>
 
-
 		<div id="friends" class="box">
 			<h3>FRIENDS</h3>
 			<p>I have many friends from my school, Intermediate and Engineering and also from my neighbourhood. But there is one person in who is my favorite, best friend and I would like to share my thoughts with him. He is my best and favorite friend Saketh Jaligama. He is my classmate from Intermediate and also from Malla Reddy Engineering College (Engineering).</p>
 			<br>
 			
 		</div>
-
-
 
 		<div id="nav1">
 			<h3>Find Me Elsewhere</h3>
