--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 			</div>
 			
 			<div class="box">
-				<h3>Blurb About Me</h3>
+				<h2>Blurb About Me</h2>
 				<p>My name is <strong>Rajesh Chittampally.</strong>  I am very passionate about coding and exploring new technologies in IT.I love travelling places and have been to many places in India. I always dreamt of becoming a successful IT professional mainly focusing on Full stack development.</p><br>
 			</div>
 			
@@ -232,13 +232,13 @@
 						<li><a href="#friends">Friends</a></li>
 					</ul>
 
-					<img src="./images/rajesh.jpg" style="text-align: center;">
+					<img src="./images/rajesh.jpg" style="text-align: center;" alt="Rajesh Chittampally">
 				</div>
 			</div>
 			<br><br>
 			
 			<div class="box" id="school">
-				<h3>SCHOOLING</h3>
+				<h2>SCHOOLING</h2>
 				<P>Since I am from <em>Hyderabad</em>, my Schooling was done in <mark><b>Arya Bhatta High School,</b> named after the man who invented zero.</mark> I was a good student all through my schooling and I never ever had a signle fight with any other pupils in my school. In the 10<sup>th</sup> Board Examinations, I got a nice percentage and was felicitated by our school management for my good behaviour through out my schooling.  </P>
 				<br>
 				<p>I really miss my school days, my friends and the enjoyment which we used to have at that time was incredible.</p>
@@ -248,11 +248,11 @@
 			</div><br><br>
 
 			<div id="college" class="box">
-				<h3>COLLEGE</h3>
+				<h2>COLLEGE</h2>
 
 				<p>I got a decent score in <em><mark>EAMCET</mark>(Engineerign and Medicine Common Admission Test)</em> and a decent rank and got admission in <em>St. Martins Engineering College</em> through convenor quota(Government body will allot seats to students based on their rank in EAMCET and upon their choice of colleges and courses they wish to study).</p><br>
 
-				<h4>MY COLLEGE</h4>
+				<h2>MY COLLEGE</h2>
 
 				<img src="./images/smec.jpg" alt="St. Martins Engineering college" title="St. Martins Engineering College" style="width: 400px; height: 300px">
 
@@ -261,14 +261,14 @@
 
 
 			<div id="family" class="box">
-				<h3>FAMILY</h3>
+				<h2>FAMILY</h2>
 				<p>I am a family man. I love my family so much. My dad is a businessman, mom is a home-maker, I have a sibling he's doing his Bachelor of Technology and currently is in <strong>3<sup>rd</sup></strong> year.</p><br>
 			
 			</div><br><br>
 
 
 			<div id="friends" class="box">
-				<h3>FRIENDS</h3>
+				<h2>FRIENDS</h2>
 				<p>I have many friends from my school, Intermediate and Engineering and also from my neighbourhood. But there is one person in who is my favorite, best friend and I would like to share my thoughts with him. He is my best and favorite friend Saketh Jaligama. He is my classmate from Intermediate and also from Malla Reddy Engineering College (Engineering).</p>
 				<br>
 			
@@ -300,9 +300,9 @@
 					<h1>Cricket</h1>
 					<p><b>Cricket</b> is the world famous sport and is like a religion when considered in <i><b>India</b></i> especially. No different from others of my age, even I started playing Cricket at a very young age and very soon I became a big fan of the sport. As many people I too dreamt of becoming a cricketer and represent my nation at International level. But that didn't happen.</p><br>
 					<p>But I started to enjoy the sport and get the pleasure by playing it in my free time with my friends, colleagues and when I was in my college, I coached few students from a Government school near my house in Cricket. They were interested in the sport and they got the techniques in the sport very soon. And now they are finding their way in the state cricket board, by playing in various leagues and by proving themselves. </p>
-					<h3>Legends</h3>
-					<img src="./images/sachin.jpg" title="Sachin Tendulkar" style="align: left;  width: 670px; height: 350px;">
-					<img src="./images/dhoni.jpg" id="ms" alt="M S DHONI" style="align: right;" title="M S Dhoni">
+					<h2>Legends</h2>
+					<img src="./images/sachin.jpg" title="Sachin Tendulkar" style="align: left;  width: 670px; height: 350px;" alt="Sachin Tendulkar with Indian flag">
+					<img src="./images/dhoni.jpg" id="ms" alt="M S DHONI" style="align: right;" title="M S Dhoni" alt="M.S. Dhoni">
 				</div>
 
 				<br><br>
@@ -319,7 +319,7 @@
 					<h1>Movies</h1>
 					<p>I love watching moview. Movies are one of the sources to enjoy and forget all the tensions for that stipulated time and come out of the theatre with a fresh kind of mind. I strongly believe that movies are very important in one's life. I enjoy watching movies with my friends and I am a huge huge fan of Pawan Kalyan, a male lead actor in Tollywood (Telugu Film Industry) of India.</p>
 
-					<h3>My Hero</h3>
+					<h2>My Hero</h2>
 					<img src="./images/pawankalyan.jpg"  alt="Pawan Kalyan" title="Pawan Kalyan">
 
 				</div>
