whatsapp share icon

--- a/index.html
+++ b/index.html
@@ -203,6 +203,11 @@
 						<li>My Hobbies</li>
 						<li>My Nativity (my homesoil)</li>
 					</ul>
+					<div class="row">
+						<div class="col-sm-1">
+							<a href="whatsapp://send?text=WhatsApp share Demo!" data-action="share/whatsapp/share"><i class="fa fa-whatsapp fa-2x" id="whatsapp-icon"></i></a>
+						</div>
+					</div>
 				</div>
 
 			</div>
