file path changes

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Rajesh Chittampally's personal website including the information about rajesh's education, experience, professional background and about social media accounts.">
     <meta name="author" content="Rajesh Chittampally">
-    <link rel="icon" type="image/jpg" href="../images/rajesh-insta-pic.jpg" />
-    <link rel="stylesheet" type="text/css" href="../css/new-website.css">
+    <link rel="icon" type="image/jpg" href="images/rajesh-insta-pic.jpg" />
+    <link rel="stylesheet" type="text/css" href="css/new-website.css">
     <title>Rajesh Chittampally</title>
 
     <!-- Bootstrap core CSS -->
@@ -29,7 +29,7 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="../css/starter-template.css" rel="stylesheet">
+<!--     <link href="../css/starter-template.css" rel="stylesheet"> -->
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
