--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
           <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
         </form> -->
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+<!--           <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
+          </li> -->
           <li class="nav-item active">
             <a class="nav-link" href="#professional-career">Experience</a>
           </li> 
@@ -54,7 +54,7 @@
             <a class="nav-link" href="#education">Education</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#myresume">Resume</a>
+            <a class="nav-link" href="rajesh_latest_resume.pdf">Resume</a>
           </li>
           <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Social Media</a>
@@ -93,10 +93,10 @@
   </div>
   <hr>
 
-  <div class="center-div" id="myresume">
+<!--   <div class="center-div" id="myresume">
     <h3>Resume</h3><br>
     <iframe id="resume" src="../rajesh_latest_resume.pdf" style="width: 60%; height: 700px; text-align: center;"></iframe>
-  </div>
+  </div> -->
 
 </main><!-- /.container -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
