linkedin in social media drop down

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
           <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Social Media</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" href="https://www.linkedin.com/in/rajeshchittampally/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i>  LinkedIn</a>
               <a class="dropdown-item" href="https://www.facebook.com/rajesh.chittampally.3/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i>  Facebook</a>
               <a class="dropdown-item" href="https://www.twitter.com/rchittampally/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>  Twitter</a>
               <a class="dropdown-item" href="https://www.instagram.com/rajesh996/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i>  Instagram</a>
