--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
               <a class="dropdown-item" href="https://www.instagram.com/rajesh996/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i>  Instagram</a>
             </div>
           </li>
+          <li class="nav-item dropdown active">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contact</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" href="tel:+91-9848134297"><i class="fa fa-phone" aria-hidden="true"></i>  +91-9848134297</a>
+              <a class="dropdown-item" href="mailto:chittampallyrajesh@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i>chittampallyrajesh@gmail.com</a>
+            </div>
+          </li>
         </ul>
       </div>
     </nav>
