changed main image url

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <!-- <br><br> -->
   <div class="center-div">
-    <img src="https://bit.ly/2RxMyXJ" class="main-image">
+    <img src="https://bit.ly/2HBp3VT" class="main-image">
     <h1>Rajesh Chittampally</h1>
     <p class="lead">Welcome to my personal website. This website includes information about my <span class="center-div-span-underline">education</span>, <span class="center-div-span-underline">experience</span> and <span class="center-div-span-underline">professional career</span>.</p>
   </div>
