--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <a class="nav-link" href="#education">Education</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="rajesh_latest_resume.pdf">Resume</a>
+            <a class="nav-link" href="rajesh_chittampally_latest_resume_1.pdf">Resume</a>
           </li>
           <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Social Media</a>
