testing id clicks

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse float-right" id="navbarsExampleDefault">
+<!--       <div class="collapse navbar-collapse float-right" id="navbarsExampleDefault">
         <!-- <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
           <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
@@ -47,15 +47,15 @@
 <!--           <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li> -->
-          <li class="nav-item active">
+<!--           <li class="nav-item active"> --> -->
             <a class="nav-link" href="#professional-career">Experience</a>
-          </li> 
-          <li class="nav-item active">
+<!--           </li>  -->
+<!--           <li class="nav-item active"> -->
             <a class="nav-link" href="#education">Education</a>
-          </li>
-          <li class="nav-item active">
+<!--           </li> -->
+<!--           <li class="nav-item active"> -->
             <a class="nav-link" href="rajesh_chittampally_latest_resume_1.pdf">Resume</a>
-          </li>
+<!--           </li> -->
           <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Social Media</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
@@ -73,7 +73,7 @@
             </div>
           </li>
         </ul>
-      </div>
+<!--       </div> -->
     </nav>
 
 <main role="main" class="container">
