--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <!--           <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li> -->
-          <li class="nav-item active"> -->
+          <li class="nav-item active">
             <a class="nav-link" href="#professional-career">Experience</a>
           </li> 
           <li class="nav-item active">
@@ -73,7 +73,7 @@
             </div>
           </li>
         </ul>
-<!--       </div> -->
+      </div>
     </nav>
 
 <main role="main" class="container">
