--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
   <div class="center-div" id="professional-career">
     <h3>Professional Career</h3>
-    <p>I started working as a Product Engineer Intern <a href="https://www.vaave.com">@Vaave</a> six months ago. Vaave is a Saas company which is the leading alumni relations and database provider across the globe. Technologies which I am currently working include PHP, node.js, MySql. </p>
+    <p>I started working as a Product Engineer <a href="https://www.vaave.com">@Vaave</a> an year ago. Vaave is a Saas company which is the leading alumni relations and database provider across the globe. Technologies which I am currently working include PHP, node.js, MySql. </p>
     <p>By working at vaave, I have got to know about many different things and the team at Vaave is so nice, they helped me in improving myself as a developer.</p>
   </div>
   <hr>
