--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
   <div class="center-div" id="education">
     <h3>Education</h3>
-    <p>I did my Bachelor of Technology from <strong>St. Martin's Engineering College</strong> , located in Hyderabad, Telangana with Computer Sciece as my major. I graduated from college with good GPA.</p>
+    <p>I did my Undergraduation (Bachelor of Technology) from <strong>St. Martin's Engineering College</strong> , located in Hyderabad, Telangana with Computer Sciece as my major. I graduated from college with good GPA.</p>
     <p>During my college days, I co-ordinated for <strong>Annual Day celebrations</strong> when I was in my 2<sup>nd</sup> year and also co-ordinated for <strong>Technical Fest</strong> when I was in my 3<sup>rd</sup> and 4<sup>th</sup> years</p>
   </div>
   <hr>
