updated main image link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <!-- <br><br> -->
   <div class="center-div">
-    <img src="http://bit.ly/website-picture" class="main-image">
+    <img src="images/rajesh-fb-pic.jpg" class="main-image">
     <h1>Rajesh Chittampally</h1>
     <p class="lead">Welcome to my personal website. This website includes information about my <span class="center-div-span-underline">education</span>, <span class="center-div-span-underline">experience</span> and <span class="center-div-span-underline">professional career</span>.</p>
   </div>
