Updated resume link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <a class="nav-link" href="#education">Education</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="Rajesh_Chittampally_Resume_latest%20(3).pdf">Resume</a>
+            <a class="nav-link" href="Rajesh_Chittampally_Resume_1.pdf">Resume</a>
           </li>
           <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Social Media</a>
@@ -91,7 +91,8 @@
 
   <div class="center-div" id="professional-career">
     <h3>Professional Career</h3>
-    <p>I started working as a Product Engineer <a href="https://www.vaave.com">@Vaave</a> an year ago. Vaave is a Saas company which is the leading alumni relations and database provider across the globe. Technologies which I am currently working include PHP, node.js, MySql. </p>
+    <p>I joined <a href="https://www.vaave.com">Vaave</a> on 25<sup>th</sup> July 2018 as an Intern. Vaave is a Saas company which is the leading alumni relations and database provider across the globe.</p>
+    <p>Technologies which I am currently working include PHP, node.js, MySql. </p>
     <p>By working at vaave, I have got to know about many different things and the team at Vaave is so nice, they helped me in improving myself as a developer.</p>
   </div>
   <hr>
