--- a/index.html
+++ b/index.html
@@ -69,9 +69,15 @@
           </li>
           <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contact</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
+            <div class="dropdown-menu" aria-labelledby="dropdown02">
               <a class="dropdown-item" href="tel:+91-9848134297"><i class="fa fa-phone" aria-hidden="true"></i>  +91-9848134297</a>
               <a class="dropdown-item" href="mailto:chittampallyrajesh@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i>  chittampallyrajesh@gmail.com</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown active">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Games</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown03">
+              <a class="dropdown-item" href="https://rajesh996.github.io/vue-punchbag/">Punchbag Game</a>
             </div>
           </li>
         </ul>
