--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Games</a>
             <div class="dropdown-menu" aria-labelledby="dropdown03">
-              <a class="dropdown-item" href="https://rajesh996.github.io/vue-punchbag/">Punchbag Game</a>
+              <a class="dropdown-item" href="https://rajesh996.github.io/vue-punchbag/" target="_blank">Punchbag Game</a>
             </div>
           </li>
         </ul>
